--- a/app/templates/album.html
+++ b/app/templates/album.html
@@ -9,7 +9,7 @@
             <h5 class="album-view-release-info">{{ album.albumData.year}} {{album.albumData.label}}</h5>
         </div>
     </section>
-    <table class="album-view-song-list" ng-repeat="songs in album.albumData.songs">
+    <table class="album-view-song-list" ng-repeat="song in album.albumData.songs">
         <tr class="album-view-song-item" ng-mouseover="hovered = true" ng-mouseleave="hovered = false">
             <td class="song-item-number">
                 <span ng-show="!song.playing && !hovered">{{ $index+1 }}</span>
