--- a/app/templates/player_bar.html
+++ b/app/templates/player_bar.html
@@ -19,8 +19,8 @@
             </a>
         </div>
         <div class="control-group currently-playing">
-            <h2 class="song-name">{{ SongPlayer.currentSong.title }}</h2>
-            <h2 class="artist-song-mobile">{{ currentAlbum.artist }}</h2>
+            <h2 class="song-name">{{ playerBar.songPlayer.currentSong.title }}</h2>
+            <h2 class="artist-song-mobile">{{playerBar.songPlayer.currentSong.title}} - {{album.albumData.artist}}</h2>
             <h3 class="artist-name">{{ album.albumData.artist }}</h3>
             <div class="seek-control">
                 <div class="seek-bar">
